css/index.css
body {
  font-family: "neosans regular", "Helvetica Neue", Helvetica, Arial, Sans-serif;
  font-style: normal;
  height: 100vh;
  width: 100vw;
  margin: 0px;
  background: #cfcfcf;
}
.background-image {
  position: absolute;
  bottom: 0;
  width: 100vw;
  z-index: -100;
  border-bottom: solid white 20px;
  /* padding-bottom: 3px;
  border-bottom: solid black 1vw; */
}
nav {
  background-color: black;
  color: white;
  font-weight: lighter;
  display: grid;
  grid-template-columns: 100px 3fr 0.4fr 0.4fr 0.5fr;
  grid-template-rows: 100px;
  position: fixed;
  top: 0;
  width: 100%;
  z-index: 100;
}
.blueline {
  margin-left: 100px;
  width: 100%;
  position: fixed;
  top: 94px;
  border: solid #00C6B3 3px;
  z-index: 101;
}
.logo {
  height: 100px;
}
.name {
  color: white;
  text-decoration: none;
  font-size: 13px;
  letter-spacing: 0.4rem;
  padding-left: 70px;
  align-self: center;
}
.nav-item {
  font-size: 11px;
  font-weight: 400;
  color: white;
  text-decoration: none;
  letter-spacing: 0.2rem;
  align-self: center;
}
.text {
  width:100%;
  position: absolute;
  bottom: 100px;
  left: 80px;
}
.page-heading-arrow {
  font-size: 40px;
  color: white;
}
.h1 {
  font-style: normal;
  font-size: 40px;
  color: white;
  text-shadow: 2px 2px 5px black;
}
i {
  font-style: normal;
}
p {
  font-style: normal;
  padding-left: 10vw;
  font-size: 20px;
  padding-top: 5vw;
  line-height: 2rem;
  display: grid;
  grid-template-rows: 30px 30px;
  grid-template-columns: 405px 1fr;
}
.p1 {
  font-style: normal;
}
.p2 {
  font-style: normal;
grid-row: 2;
}
.p3 {
  font-style: normal;
grid-row: 2;
}
.process {
  font-style: normal;
  padding-left: 20vw;
  font-size: 19px;
  padding-top: 7vw;
  color: white;
  text-shadow: 1px 1px 5px black;
}
.care {
  font-style: normal;
  padding-right: 4vw;
}
.empathise {
  font-style: normal;
  padding-right: 4vw;
}
.define {
  font-style: normal;
  padding-right: 4vw;
}
.solve {
  font-style: normal;
  padding-right: 4vw;
}

@media screen and (max-width: 1110px) {
  .text {
    bottom: 390px;
  }
  p {
    padding-left: 37px;
  }
  .process {
    padding-left: 37px;
  }
}
@media screen and (max-width: 950px) {

  nav {
    grid-template-rows: 50px 50px;
    grid-template-columns: 120px 1fr 1fr 1fr;
  }
  .logo {
  }
  .name {padding-left: 0px;
    grid-column: 2/5;
    justify-self: center;
  }
  .nav-item {
    justify-self: center;
  }
  .nav-item1 {
    grid-column: 2/3;
  }
  .nav-item2 {
    grid-column: 3/4;
  }
  .nav-item3 {
    grid-column: 4/5;
  }
}
@media screen and (max-width: 810px) {
  .text {
    font-size: 30px;
  }
  .h1 {
    font-size: 30px;
    font-style: normal;
  }
  p {
    font-size: 16px;
    grid-template-columns: 324px 1fr;
  }
  .process {
    font-size: 16px;
  }
}
@media screen and (max-width: 690px) {
  .text {
    bottom: 350px;
    left: 80px;
  }
  .page-heading-arrow {
    font-size: 25px;
  }
  .h1 {
    font-size: 25px;
  }
  p {
    padding-left: 22px;
    grid-template-rows: 30px 30px 30px;
  }
  .p3 {
    font-style: normal;
  grid-row: 3;
  }
  .process {
    padding-left: 22px;
  }
}
@media screen and (max-width: 550px) {
  .name {
    font-size: 12px;
    letter-spacing: 0.2rem;
  }
  .nav-item1 {
    grid-column: 2/3;
    font-size: 0.6rem;
    letter-spacing: 0.1rem;
  }
  .nav-item2 {
    grid-column: 3/4;
    font-size: 0.6rem;
    letter-spacing: 0.1rem;
  }
  .nav-item3 {
    grid-column: 4/5;
    font-size: 0.6rem;
    letter-spacing: 0.1rem;
}
  .text {
    bottom: 150px;
    left: 30px;
  }
  .page-heading-arrow {
    font-size: 21px;
  }
  .h1 {
    font-size: 21px;
  }
  p {
    font-size: 14px;
    padding-top: 30px;
    padding-left: 22px;
    grid-template-rows: 30px 30px 30px;
  }
  .p3 {
    font-style: normal;
  grid-row: 3;
  }
  .process {
    padding-top: 30px;
    font-size: 14px;
    padding-left: 22px;
  }
}

/*
.text {
  width:100%;
  position: absolute;
  bottom: 400px;
  left: 80px;
}
.page-heading-arrow {
  font-size: 40px;
  color: white;
}
.h1 {
  font-style: normal;
  font-size: 40px;
  color: white;
  text-shadow: 2px 2px 5px black;
}
i {
  font-style: normal;
}
p {
  font-style: normal;
  padding-left: 10vw;
  font-size: 20px;
  padding-top: 5vw;
  line-height: 2rem;
  display: grid;
  grid-template-rows: 30px 30px;
  grid-template-columns: 405px 1fr;
}
.p1 {
  font-style: normal;
}
.p2 {
  font-style: normal;
grid-row: 2;
}
.p3 {
  font-style: normal;
grid-row: 2;
}
.process {
  font-style: normal;
  padding-left: 20vw;
  font-size: 19px;
  padding-top: 7vw;
  color: white;
  text-shadow: 1px 1px 5px black;
}
.care {
  font-style: normal;
  padding-right: 4vw;
}
.empathise {
  font-style: normal;
  padding-right: 4vw;
}
.define {
  font-style: normal;
  padding-right: 4vw;
}
.solve {
  font-style: normal;
  padding-right: 4vw;
} */

